--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,26 @@
+blinker==1.6.2
+click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
+exceptiongroup==1.1.1
+Flask==2.3.1
+fonttools==4.39.3
+greenlet==2.0.2
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+MarkupSafe==2.1.2
+matplotlib==3.7.1
+numpy==1.24.3
+packaging==23.1
+Pillow==9.5.0
+pluggy==1.0.0
+pyparsing==3.0.9
 pytest==7.3.1
-
-SQLAlchemy~=2.0.11
+python-dateutil==2.8.2
+six==1.16.0
+SQLAlchemy==2.0.12
+tomli==2.0.1
+typing_extensions==4.5.0
+Werkzeug==2.3.2
